--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.4.0"
   },
   "devDependencies": {
     "@fernandobarrosd/eslint-config-react-ts": "^0.0.2",
